chore: OpenJDK 22 support